# cpbl-data

./: .env  .gitignore  README.md  cpbl.py  cpbl_betting_model.py  lastTenGames.gs  lastTenGamesPreseason.gs  log.txt  npb.py  populate_2026_sailu.py  populate_2026_schedule.py  pyproject.toml  repair_2025_sailu_enrichment.py  requirements.txt  utils.py
.github/workflows/: cpbl_scheduler.yml  npb_scheduler.yml
migration/: populate_2025_sailu.py  populate_2026.py  populate_2026_sailu.py  repair_2025_sailu_enrichment.py  sync_sailu_2025_2026_to_target.py
tests/: test_cpbl.py  test_npb.py
